css to fix chat overlap

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -60,6 +60,7 @@ form input {
     float: left;
     width: 87%;
     margin-right: 1%;
+    margin-bottom: 60px;
 }
 
 #right-panel{
